# Sofware-AI-Persian

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  banner.txt  main.py  pyproject.toml  requirements.txt  run.bat  run.sh
.github/workflows/: sync-to-english.yml
core/: agent_core.py  ai_brain.py  browser_core.py  logging_config.py  memory_system.py  task_engine.py  voice_io.py
