[project]
name = "sofware-ai"
version = "0.1.0"
description = "An intelligent task processing system with browser automation and memory capabilities"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.9.1",
    "python-dotenv>=1.0.0",
    "playwright>=1.36.0",
]
