[project]
name = "sofware-ai"
version = "0.1.0"
description = "An intelligent task processing system with browser automation and memory capabilities"
license = "All Rights Reserved"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    browser-use>=0.9.1,
    python-dotenv>=1.0.0,
    playwright>=1.36.0,
    pyfiglet>=1.0.4,
    SpeechRecognition>=3.10.0,
    google-cloud-texttospeech>=2.14.0,
    gTTS>=2.4.0,
    pydub>=0.25.1,
    sounddevice>=0.4.6,
    soundfile>=0.12.1,
    pyaudio>=0.2.13,
    pywin32>=305,
]